重新修改ui，修改ui层次结构，晚上登录细节

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -89,6 +89,13 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        
+        <!-- 管理员设置 -->
+        <activity
+            android:name="com.lwb.nicecontroller.app.user.activity.AdminManagerActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
 
         <!-- 管理员修改密码的activity -->
         <activity
