--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,13 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/GetuiSdk2.4.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/GetuiExt-2.0.3.jar"/>
+	<classpathentry kind="lib" path="libs/jpush-sdk-release1.7.3.jar"/>
+	<classpathentry kind="lib" path="libs/VoiceRecognition-1.2.jar"/>
+	<classpathentry kind="lib" path="libs/fastjson-1.1.34.android.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/android-async-http-1.3.2.jar"/>
+	<classpathentry kind="lib" path="libs/galaxy.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
