--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:protectionLevel="signature" />
     <!-- 百度SDK -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    
-    
+
     <!-- Required  一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="com.lwb.nicecontroller.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
@@ -37,13 +36,30 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
+    <!-- getui sdk -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="getui.permission.GetuiService.com.lwb.nicecontroller" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+
+    <permission
+        android:name="getui.permission.GetuiService.com.lwb.nicecontroller"
+        android:protectionLevel="normal" >
+    </permission>
+
     <application
         android:name="com.lwb.nicecontroller.jpush.ExampleApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
 
-       
         <!-- For test only 启动页 -->
         <activity
             android:name="com.lwb.nicecontroller.app.SplashActivity"
@@ -89,7 +105,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
+
         <!-- 管理员设置 -->
         <activity
             android:name="com.lwb.nicecontroller.app.user.activity.AdminManagerActivity"
@@ -110,7 +126,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        
+
         <!-- 修改url的activity -->
         <activity
             android:name="com.lwb.nicecontroller.app.user.activity.ModifyServerUrlActivity"
@@ -185,6 +201,106 @@
         <meta-data
             android:name="JPUSH_APPKEY"
             android:value="fbe99dd9719373798ab7545b" /> <!-- </>值来自开发者平台取得的AppKey -->
+
+
+        <!-- =================================================== -->
+        <!-- 个推SDK配置开始 -->
+        <!-- 配置的第三方参数属性 -->
+        <meta-data
+            android:name="PUSH_APPID"
+            android:value="xzXSMuUPARA3xsmPxAipq8" />
+        <meta-data
+            android:name="PUSH_APPKEY"
+            android:value="rZFxDXNaB46vflHxtJRdgA" />
+        <meta-data
+            android:name="PUSH_APPSECRET"
+            android:value="mOTnKmZmUw6cvaXsvAtRTA" />
+        <meta-data
+            android:name="PUSH_GROUPID"
+            android:value="" />
+        <!-- 配置第三方Receiver -->
+        <receiver
+            android:name="com.lwb.nicecontroller.app.main.PushDemoReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.igexin.sdk.action.xzXSMuUPARA3xsmPxAipq8" />
+            </intent-filter>
+        </receiver>
+        <!-- 配置SDK核心服务 -->
+        <service
+            android:name="com.igexin.sdk.PushService"
+            android:exported="true"
+            android:label="NotificationCenter"
+            android:process=":pushservice" >
+        </service>
+
+        <receiver android:name="com.igexin.sdk.PushReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="com.igexin.sdk.action.refreshls" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.igexin.sdk.PushManagerReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.igexin.sdk.action.pushmanager" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name="com.igexin.sdk.PushActivity"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:process=":pushservice"
+            android:taskAffinity="com.igexin.sdk.PushActivityTask"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+
+        <service
+            android:name="com.igexin.download.DownloadService"
+            android:process=":pushservice" />
+
+        <receiver android:name="com.igexin.download.DownloadReceiver" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <provider
+            android:name="com.igexin.download.DownloadProvider"
+            android:authorities="downloads.com.lwb.nicecontroller"
+            android:process=":pushservice" />
+        <!-- android:authorities="downloads.第三方包名" -->
+
+        <activity
+            android:name="com.igexin.getuiext.activity.GetuiExtActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:process=":pushservice"
+            android:taskAffinity="android.task.myServicetask"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <receiver
+            android:name="com.igexin.getuiext.service.PayloadReceiver"
+            android:exported="false" >
+            <intent-filter>
+
+                <!-- 这个com.igexin.sdk.action.7fjUl2Z3LH6xYy7NQK4ni4固定，不能修改 -->
+                <action android:name="com.igexin.sdk.action.7fjUl2Z3LH6xYy7NQK4ni4" />
+                <!-- android:name="com.igexin.sdk.action.第三方的appId" -->
+                <action android:name="com.igexin.sdk.action.xzXSMuUPARA3xsmPxAipq8" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="com.igexin.getuiext.service.GetuiExtService"
+            android:process=":pushservice" />
+
+        <!-- 个推SDK配置结束 -->
 
     </application>
 
