增加新的需求（红外，自动灯，声音，CPU，GPU），修改UI界面

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -96,6 +96,14 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        
+        <!-- 设置警戒值 -->
+        <activity
+            android:name="com.lwb.nicecontroller.app.device.SeekInfoActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        
 
         <!-- 管理员修改密码的activity -->
         <activity
